# NavierStockerSentimentFlow

./: .gitignore  README.md  initial_conditions_pos.csv  main.py  processing_dataset.ipynb  pyproject.toml  setup.py  simulations.json
SentimentFlow/: __init__.py  __main__.py  data_processing.py  plotting.py  senti_keywords.py  sentiment_analysis.py  setup.py
SentimentFlow/test/: plotting.py  test_sentiment_analysis.py
aclImdb/: README
data/senticnet/: README.md  emotions_categories.csv
results/: speeches_processed.csv
test/: test_sentiment_analysis.py
