[tool.poetry]
name = "computionaltextdynamics"
version = "0.1.0"
description = ""
authors = ["semanticboy <davide.picca@unil.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python =  ">=3.10,<3.13"
jupyter = "^1.0.0"
spacy = "^3.7.2"
seaborn = "^0.13.0"
scipy = "^1.11.3"
scikit-learn = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
